--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,107 +1,217 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+@font-face {
+  font-family: 'Hanken Grotesk';
+  src: url('/fonts/HankenGrotesk-VariableFont_wght.ttf');
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+@font-face {
+  font-family: 'Hanken Grotesk';
+  src: url('/fonts/static/HankenGrotesk-Bold.ttf');
+  font-weight: bold;
+}
 
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
+@font-face {
+  font-family: 'Hanken Grotesk';
+  src: url('/fonts/static/HankenGrotesk-ExtraBold.ttf');
+  font-weight: bolder;
+}
 
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
+@font-face {
+  font-family: 'Hanken Grotesk';
+  src: url('/fonts/static/HankenGrotesk-Medium.ttf');
+  font-weight:normal;
+}
 
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
+.attribution { 
+  margin-top: 100px;
+  font-size: 11px; 
+  text-align: center; 
+}
+
+.attribution a { 
+  color: hsl(228, 45%, 44%); 
+}
+
+
+img{
+  padding-right: 12px;
+}
+
+button{
+  font-family: 'Hanken Grotesk';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 23px;
+  text-align: center;
+
+  /* White */
+
+  color: #FFFFFF;
+
+  background: #303B59;
+  border-radius: 128px;
+  width: 100%;
+  height: 56px;
+}
+
+button:focus{
+  background: linear-gradient(180deg, #7755FF 0%, #6943FF 0.01%, #2F2CE9 100%);
+}
+
+.attribution { 
+  margin-top: 100px;
+  font-size: 11px; 
+  text-align: center; 
+}
+
+.attribution a { 
+  color: hsl(228, 45%, 44%); 
+}
+
+main { 
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  height: 95vh;
+  gap: 20px
+}
+@media only screen and (max-width: 600px){
+  main { 
+    align-items:normal;
+  }
+
+  main > .blue-card{
+    border-radius: 0px 0px 32px 32px;
+    display: inline;
   }
 }
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+section {
+  width: 368px;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+.blue-card{
+  background: linear-gradient(180deg, #7755FF 0%, #6943FF 0.01%, #2F2CE9 100%);
+  border-radius: 32px;
+  display: block;
+  text-align: center;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.blue-card-title{
+  font-family: 'Hanken Grotesk';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 31px;
+
+  /* Light Blue */
+
+  color: #CAC9FF;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.blue-card-circle{
+  background: linear-gradient(180deg, #4D21C9 0%, rgba(37, 33, 201, 0) 100%, rgba(37, 33, 201, 0) 100%);
+  border-radius: 100%;
+  width: 200px;
+  height: 200px;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.text-div{
+  width: 81px;
+  height: 99px;
+}
+
+.text-div > h3 {
+  font-family: 'Hanken Grotesk';
+  font-style: normal;
+  font-weight: 800;
+  font-size: 72px;
+  line-height: 72px;
+  /* identical to box height, or 100% */
+  text-align: center;
+  /* White */
+  color: #FFFFFF;
+  margin-bottom: 0px;
+  margin-top: 0px;
+}
+
+.text-div > p{
+  /* Body (Bold) */
+
+  font-family: 'Hanken Grotesk';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 23px;
+
+  /* Light Blue */
+
+  color: #CAC9FF;
+
+  mix-blend-mode: normal;
+  opacity: 0.52;
+  margin-top: 0px;
+}
+
+.footer-title{
+  /* Heading L */
+
+  font-family: 'Hanken Grotesk';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 42px;
+  /* identical to box height */
+
+  text-align: center;
+
+  /* White */
+
+  color: #FFFFFF;
+}
+
+.footer-p{
+  width: 260px;
+  height: 69px;
+  /* Body */
+  font-family: 'Hanken Grotesk';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 23px;
+  text-align: center;
+
+  /* Light Blue */
+
+  color: #CAC9FF;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.result-dashboard-title{
+  margin-left: auto;
+  margin-right: auto;
+  padding-bottom: 40px;
+  /* Heading M */
+  font-family: 'Hanken Grotesk';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 31px;
+
+  /* Dark Navy */
+
+  color: #303B59;
+}
+
+.result-dashboard{
+  height: 272px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
